--- a/Detector_picos.ipynb
+++ b/Detector_picos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,33 +14,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 99,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.607513427734375\n",
+      "0.4860107421875\n"
+     ]
+    }
+   ],
    "source": [
-    "audio,fs = sf.read('clap.wav')"
+    "audio,fs = sf.read('More_claps.wav')\n",
+    "maximo=np.max(audio)\n",
+    "print(maximo)\n",
+    "umbral=maximo*0.8\n",
+    "print(umbral)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# ventana=[0]*len(audio)\n",
-    "# tamano_ventana = 10\n",
-    "# for i in range(tamano_ventana):\n",
-    "#     ventana[i]=1\n",
-    "\n",
-    "# for i in range(100):\n",
-    "#     ventana[tamano_ventana+i]=1\n",
-    "#     ventana[i]=0\n",
-    "#     print(ventana)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +48,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
+      "Hay un nuevo sonido\n",
       "Hay un nuevo sonido\n",
       "Hay un nuevo sonido\n",
       "Hay un nuevo sonido\n",
@@ -98,30 +167,14 @@
     "max_locales=[]\n",
     "for i in range(1000):\n",
     "    audio_vent = ventana*audio\n",
+    "\n",
     "    ventana[tamano_ventana+i]=1\n",
     "    ventana[i]=0\n",
+    "    \n",
+    "    maximo=np.max(audio)    \n",
     "    max_locales.append(max(audio_vent))\n",
-    "    umbral=np.max(audio)\n",
-    "    if (max_locales[i]-max_locales[i-1])>0:\n",
+    "    if maximo==max_locales[i]:\n",
     "        print(\"Hay un nuevo sonido\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "7888\n"
-     ]
-    }
-   ],
-   "source": [
-    "ventana=np.ones(len(audio))\n",
-    "print(len(ventana))"
    ]
   }
  ],
